Fix the navbar to show complete email and be right aligned

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -166,6 +166,10 @@ pre code span{
 	color: #666;
 }
 
+mainNav {
+	text-alight: right;
+}
+
 .hljs-preprocessor {
     color: #75715e;
 }
